test/test_11710503_10.out
Error type 5 at Line 8: unmatching type on both sides of assignment
